--- a/htdocs/css/play.css
+++ b/htdocs/css/play.css
@@ -49,6 +49,10 @@ li {
 }
 */
 
+table {
+
+}
+
 #photo {
   width: 100%;
   height: 100%;
@@ -60,7 +64,13 @@ li {
   left: 5px;
   color: white;
 }
-
+#list {
+  position: absolute;
+  top: 10px;
+  left: 80%;
+  color: white;
+ background-color: rgba(0, 0, 0, 0.6);
+}
 #arrow {
   position: absolute;
 /*  right: 5px;
