--- a/htdocs/css/play.css
+++ b/htdocs/css/play.css
@@ -15,6 +15,10 @@ li {
 .param{
  position:fixed;
  left:20px;
+ width:600px;
+}
+input[type="range"]{
+  width:400px;
 }
 #take{
  position:absolute;
@@ -22,6 +26,7 @@ li {
  display:block;
   font-size : 32px;
   width: 100%;
+  z-index:2;
 }
 #controller {
   display: none;
@@ -68,6 +73,7 @@ li {
 #cvs {
   width: 100%;
   height: 100%;
+  z-index:1;
 }
 
 #counter {
