--- a/htdocs/css/play.css
+++ b/htdocs/css/play.css
@@ -16,6 +16,7 @@ li {
  position:fixed;
  left:20px;
  width:600px;
+ z-index:2;
 }
 input[type="range"]{
   width:400px;
@@ -74,6 +75,7 @@ input[type="range"]{
   width: 100%;
   height: 100%;
   z-index:1;
+  transform : rotateZ(180deg);
 }
 
 #counter {
