--- a/htdocs/css/play.css
+++ b/htdocs/css/play.css
@@ -101,9 +101,10 @@ input[type="range"]{
 
 #counter {
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: 35px;
+  left: 35px;
   color: white;
+  z-index:4;
 }
 #list {
   position: absolute;
