--- a/htdocs/css/play.css
+++ b/htdocs/css/play.css
@@ -33,10 +33,34 @@ input[type="range"]{
   width:600px;
   clear:left;
 }
-#buttons{
+#buttons {
+  background-color:rgba(0,0,0,0.4);
+ 
+}
+
+.help {
+ z-index:1;
  position:fixed;
- top:80%;
- left:50%;
+ 
+ top:20px;
+ left:20px;
+ font-size:24px;
+ border-radius: 5px;
+ background:rgba(255,255,255,0.4);
+ margin-top:4px;
+ margin-left:1px;
+ margin-bottom:4px;
+ font-family:'Open Sans Light',Helvetica,sans-serif;
+}
+
+#buttons input{
+ font-size:24px;
+ border-radius: 5px;
+ background: -moz-linear-gradient(top, #fff, #c1c1c1 1%, #d1d1d1 50%, #DFDFDF 99%, #ccc);  
+ margin-top:4px;
+ margin-left:1px;
+ margin-bottom:4px;
+ font-family:'Open Sans Light',Helvetica,sans-serif;
 }
 
 #take{
