--- a/gdworker/app/views/camera/apiList.haml
+++ b/gdworker/app/views/camera/apiList.haml
@@ -6,6 +6,10 @@
     {:label=>"takePicture" ,:url=>"actTakePicture",:params=>[]},
     {:label=>"SetFullSize" ,:url=>"setPostviewImageSize",:params=>["Original"]},
     {:label=>"SetSmallSize" ,:url=>"setPostviewImageSize",:params=>["2M"]},
+    {:label=>"MovieMode" ,:url=>"setShootMode",:params=>["movie"]},
+    {:label=>"StillMode" ,:url=>"setShootMode",:params=>["still"]},
+    {:label=>"MovieRecStart" ,:url=>"startMovieRec",:params=>[]},
+    {:label=>"MovieRecStop" ,:url=>"stopMovieRec",:params=>[]},
     {:url=>"getShootMode",:params=>[]},
     {:url=>"getSupportedShootMode",:params=>[]},
     {:url=>"getAvailableShootMode",:params=>[]},
