Enable to controll by TenKey

--- a/gdworker/app/stylesheets/play.scss
+++ b/gdworker/app/stylesheets/play.scss
@@ -24,7 +24,7 @@ li > div {
   text-align: center;
   font-size:30px;
   margin: 14px;
-  border : 2px white solid;
+//  border : 2px white solid;
 }
 
 .selectedItem{
